Thu Mar  2 12:18:36 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (ISODELIB): Remove reference to $(ISODELIB).

Wed Mar  1 11:52:36 1995  Theodore Y. Ts'o  <tytso@dcl>

	* configure.in: Remove ISODE_INCLUDE, replace check for -lsocket
		and -lnsl with WITH_NETLIB check.

Tue Feb 28 02:05:53 1995  John Gilmore  (gnu at toad.com)

	* kdb5_destroy.c:  Avoid <krb5/...> and <com_err.h> includes.

Fri Jan 13 15:23:47 1995  Chris Provenzano (proven@mit.edu)

    * Added krb5_context to all krb5_routines

Thu Oct  6 23:43:38 1994  Theodore Y. Ts'o  (tytso@dcl)

	* kdb5_destroy.c (main): Add option to force destruction of a
		  database.

Mon Oct  3 19:10:23 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: Use $(srcdir) to find manual page for make install.

Thu Sep 29 22:20:25 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: Relink executable when libraries change.

Wed Jun 29 00:22:07 1994  Tom Yu  (tlyu at dragons-lair)

	* kdb5_destroy.c: fix things to call krb5_init_ets
